# panacus

./: '  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  package.sh  paths.txt  set-version.sh
.github/workflows/: rust_build.yml
LICENSES/: d3-color-legend.txt
benches/: panacus_benchmark.rs
docs/: chr22.hprc-v1.0-pggb.histgrowth.html
etc/: bootstrap.custom.scss  bootstrap.min.css  chart.js  chartjs-chart-matrix.min.js  color-modes.min.js  custom.css  d3-hexbin.v0.2.min.js  d3-legend.js  d3-legend.min.js  hook_after.js  hook_after.min.js  lib.js  lib.min.js  make_custom_bootstrap.sh  report_template.html
examples/: html_report.md  ordered_pangenome_growth_statistics.md  pangenome_growth_ecoli.md  pangenome_growth_minigraph_cactus.md  pangenome_growth_pggb.md
hbs/: analysis_section.hbs  analysis_tab.hbs  bar.hbs  heatmap.hbs  hexbin.hbs  line.hbs  pdf.hbs  png.hbs  report.hbs  report_content.hbs  svg.hbs  table.hbs  tree.hbs
scripts/: panacus-visualize.py  visualize_growth.py  visualize_stats.py
src/: abacus.rs  analyses.rs  analysis.rs  analysis_parameter.rs  bench.rs  cli.rs  commands.rs  core.rs  data_manager.rs  graph.rs  graph_broker.rs  hist.rs  html.rs  html_report.rs  io.rs  lib.rs  main.rs  path.rs  path_parser.rs  util.rs
src/analyses/: counts.rs  coverage_line.rs  growth.rs  hist.rs  histgrowth.rs  info.rs  node_distribution.rs  ordered_histgrowth.rs  similarity.rs  table.rs
src/commands/: counts.rs  growth.rs  hist.rs  histgrowth.rs  info.rs  node_distribution.rs  ordered_histgrowth.rs  render.rs  report.rs  similarity.rs  table.rs
src/core/: io.rs  io.save
src/data_manager/: abacus.rs  graph.rs  hist.rs  util.rs
src/graph_broker/: abacus.rs  graph.rs  hist.rs  util.rs
test/: README.md  cdbg.gfa  integrated_test.R  test_groups.txt
test/bed_chrM/: exclusion.bed3  inclusion.bed1  inclusion.bed3  inclusion_chm13.bed1  inclusion_sub.bed1
tests/: growth.rs  hist.rs  histgrowth.rs  info.rs  ordered_histgrowth.rs
tests/test_files/: t_groups.gfa  t_groups.hist.tsv
