[package]
name        = "panacus"
version     = "0.2.0"
edition     = "2018"
rust-version= "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap        = { version = "4.0", features = [ "derive" ] }
itertools   = "0.10.3"
quick-csv   = "0.1"
rand        = "0.8.4"
rayon       = "1.5.3"
regex       = "1"
rug         = "1.16.0"
rustc-hash  = "1"
strum       = "0.24"
strum_macros= "0.24"

# Logging and error management
anyhow     = "1"
env_logger = "0.10"
log        = "0.4"
thiserror  = "1"
