[package]
name        = "panacus"
version     = "0.2.1"
edition     = "2018"
rust-version= "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap        = { version = "4.0", features = [ "derive" ] }
itertools   = "0.11.0"
once_cell   = "1.18.0"
quick-csv   = "0.1"
rand        = "0.8.5"
rayon       = "1.7.0"
regex       = "1"
rustc-hash  = "1"
strum       = "0.25"
strum_macros= "0.25"

# Logging and error management
anyhow     = "1"
env_logger = "0.10"
log        = "0.4"
thiserror  = "1"
