[package]
name        = "panacus"
version     = "0.2.5"
edition     = "2018"
rust-version= "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64      = "0.21"
clap        = { version = "4.4.1", features = ["derive", "wrap_help", "cargo"] }
flate2      = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
handlebars  = "4.3"
itertools   = "0.11"
once_cell   = "1.18"
quick-csv   = "0.1.6"
rand        = "0.8"
rayon       = "1.7"
regex       = "1"
rustc-hash  = "1"
strum       = "0.25"
strum_macros= "0.25"
time        = { version = "0.3", features = ["macros", "formatting"] }

# Logging and error management
anyhow     = "1"
env_logger = "0.10"
log        = "0.4"
thiserror  = "1"
thousands = "0.2.0"
serde_yaml = "0.9.21"
serde = "1.0.214"
memchr = "2.6.2"

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0.8"
predicates = "2.1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
debug = 1

[[bench]]
name = "panacus_benchmark"
harness = false
